--- a/styles.css
+++ b/styles.css
@@ -1,71 +1,93 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+
+:root {
+  --white: #FFFFFF;
+  --grey: #333333;
+  --dark-grey: #1F1F1F;
+  --off-black: #141414;
+  --green: #C5F82A;
+}
+
+*, *::before, *::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  margin: 0 auto;
+  background-color: var(--off-black);
+  color: var(--white);
+  font-family: 'Inter', sans-serif;
+}
+
+.container {
   height: 100vh;
-  width: 100%;
   display: flex;
-  justify-content: center;
   align-items: center;
-  background-color: hsl(0, 0%, 8%);
-  color: hsl(0, 0%, 100%);
-  font-family: "Inter", sans-serif;
+  justify-content: center;
 }
-main {
-  width: 30%;
-}
+
 .card {
-  margin: 0 auto;
+  background-color: var(--dark-grey);
+  max-width: 90%;
+  padding: 2.5rem;
+  margin: 2rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: hsl(0, 0%, 12%);
-  padding: 2rem 2rem;
-  border-radius: 10px;
   align-items: center;
+  border-radius: 0.625rem;
   text-align: center;
 }
-.avatar img {
+
+.header-wrapper img {
   border-radius: 50%;
-  width: 5rem;
+  width: 5.5rem;
+  margin-bottom: 1.25rem;
 }
-.socials {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  margin-top: 1rem;
-  width: 90%;
+
+.header-wrapper {
+  margin-bottom: 1.25rem;
 }
-.socials > button {
-  padding: 1rem 1rem;
-  border-radius: 0.8rem;
-  border: none;
-  background-color: hsl(0, 0%, 20%);
-  color: hsl(0, 0%, 100%);
-  cursor: pointer;
-}
-.socials > button:hover {
-  background-color: hsl(0, 0%, 8%);
-  color: hsl(0, 0%, 80%);
-}
-p {
-  font-size: 0.7rem;
+
+.header-name {
+  margin-bottom: 0.5rem;
+  font-size: 1.5rem;
   font-weight: 400;
 }
-h4 {
-  color: hsl(75, 94%, 57%);
-  font-size: 0.8rem;
-  font-weight: 600;
+
+.header-location {
+  color: var(--green);
+  font-weight: 700;
+  font-size: 0.85rem;
 }
-@media only screen and (max-width: 600px) {
-  main {
-    width: 80%;
-  }
-  p {
-    font-size: 1rem;
-  }
+
+.socials {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
 }
-@media only screen and (min-width: 600px) and (max-width: 1440px) {
-  main {
-    width: 40%;
-  }
+
+.post-description {
+  margin-bottom: 1.25rem;
+  font-size: 0.875rem;
+  opacity: 0.6;
+}
+
+.socials > button {
+  width: 18rem;
+  padding: 1rem 1rem;
+  border-radius: 0.5rem;
+  border: none;
+  background-color: var(--grey);
+  color: var(--white);
+  cursor: pointer;
+  font-weight: 700;
+}
+
+.socials > button:hover {
+  background-color: var(--green);
+  color: var(--off-black);
 }
